# orbit

./: .env.example  .gitignore  DEPLOY.md  GOOGLE_PLACES_SETUP.md  README.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt  test_deployment.py
.streamlit/: config.toml
scripts/: init_db.py  seed_demo_data.py
src/orbit/: __init__.py  app.py  config.py  db.py  models.py
src/orbit/services/: __init__.py  export_ics.py  gemini_resolver.py  google_places.py  optimizer.py  packing.py  places.py  planner.py  prep.py  resolver.py  routing.py  simple_resolver.py  tasks.py  tavily_search.py
src/orbit/ui/: __init__.py
src/orbit/utils/: geolocation.py
tests/: __init__.py  conftest.py  test_conversions.py  test_google_maps_url.py  test_optimizer.py  test_packing.py  test_places.py  test_planner.py  test_prep.py  test_resolver.py  test_routing.py
