[project]
name = "orbit"
version = "0.1.0"
description = "Tasks, time, and routes — perfectly aligned. A personal day-planner and life-optimizer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "streamlit-folium>=0.18.0",
    "folium>=0.15.0",
    "pandas>=2.0.0",
    "icalendar>=5.0.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orbit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
